# Core_Layer

./: .env  .gitignore  README.md  chat_core.py  main.py  pipeline_run.py  pyproject.toml
core/: README.md  memory_manager.py  prompt_layer.py  rag_pipeline.py
ingestion/bronze/: README.md  bronze_loader.py
ingestion/catalog/: README.md  catalog_manager.py  registry.json
ingestion/gold/: README.md  gold_vectorizer.py
ingestion/memory/: README.md  memory.json  memory_manager.py
ingestion/observability/: README.md
ingestion/prompt/: README.md  prompt_layer.py
ingestion/silver/: README.md  silver_processor.py
memory/: memory.json
