[project]
name = "corelayyer"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "faiss-cpu>=1.12.0",
    "langchain>=1.0.2",
    "langchain-community>=0.4.1",
    "langchain-openai>=1.0.1",
    "ollama>=0.6.0",
    "pdfminer-six>=20250506",
    "pi-heif>=1.1.1",
    "python-dotenv>=1.2.1",
    "unstructured[pdf]>=0.18.15",
]
